        - multi-object, multi-script/proc tests are now automated within the
          test suite (as t/112 (good) and t/113 (die)) (closes #132)
        - added SIGINT multi test files
        - added meta_locks(). Manages shared memory lock section
        - serial Arduino OLED display now displays the current test file number
          (closes #106)

2.3633_01 2019-07-05
        - added the test platform I2C address map listing (closes #103)
        - EEPROM: add the new RPi::EEPROM::AT24C32 distribution for EEPROM
          access (closes #104), and tests pull the EEPROM object from a $pi
          object (closes #105)
        - implemented IPC::Shareable so we can read and write object and other
          various information (pins, test info etc) between separate processes
          and objects (closes #107)
        - updated RPi::Pin (and subsequently register_pin()) with the ability
          to store a comment/description with each pin. This will allow all
          objects across all processes to identify which pin is being used for
          what purpose (closes #108)
        - added new metadata() in Core, returns a copy of the meta data stored
          within the shared memory space
        - added clean_shared() in Core, (with binary 'pi-erase-metadata'). Used
          to wipe out the shared metadata in the event of power loss while Pi is
          running
        - added pimetadata and pi-erase-metadata scripts
        - cleanup() no longer tries to set pin_mode(). pin_mode() gets its data
          from mode_alt() which has values of 0-7, so if we're higher than mode
          3, everything fails, because pin_mode() accepts only values 0-3. We
          just glean the mode from the 'alt' status instead
        - added checksum(), generates a random 32-byte hexidecimal string
        - added uuid(), returns the generated string set as the Pi object's UUID
          in the new() method